--- a/client/style.css
+++ b/client/style.css
@@ -1,11 +1,11 @@
 #banner {
     background-image: url("./assets/imgs/banner.png");
     z-index: 100;
-    width: 100%; /* Adjust as needed */
-    height: 35vh; /* Adjust as needed */
+    width: 100%; 
+    height: 35vh; 
     object-fit:cover;
-    background-size: cover; /* This ensures the image covers the entire div */
-    background-position: center; /* This centers the image */
+    background-size: cover;
+    background-position: center;
   }
   
   img {
