--- a/client/style.css
+++ b/client/style.css
@@ -1,18 +1,22 @@
 #banner {
-    background-image: url("./assets/imgs/banner.png");
-    z-index: 100;
-    width: 100%; 
-    height: 35vh; 
-    object-fit:cover;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  img {
-    max-width: 80%;
-  }
-  
-  * {
-    box-sizing: border-box;
-    overflow-x: hidden;
-  }
+  background-image: url("./assets/imgs/banner.png");
+  z-index: 1;
+  width: 100%;
+  height: 35vh;
+  object-fit:cover;
+  background-size: cover;
+  background-position: center;
+}
+
+img {
+  max-width: 80%;
+}
+
+h1 {
+  overflow-y: hidden;
+}
+
+* {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
